--- a/capaPresentacion/capaPresentacion.csproj
+++ b/capaPresentacion/capaPresentacion.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBusquedaSolicitante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBusquedaSolicitante.Designer.cs">
+      <DependentUpon>frmBusquedaSolicitante.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmInicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmBusquedaSolicitante.resx">
+      <DependentUpon>frmBusquedaSolicitante.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInicio.resx">
       <DependentUpon>frmInicio.cs</DependentUpon>
     </EmbeddedResource>
