--- a/capaLógica/capaLógica.csproj
+++ b/capaLógica/capaLógica.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="claseLugares.cs" />
+    <Compile Include="claseSolicitante.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
