--- a/capaAccesoDatos/capaAccesoDatos.csproj
+++ b/capaAccesoDatos/capaAccesoDatos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B99276D9-F0BA-4B23-9A62-3BF2A55E8B08}</ProjectGuid>
+    <ProjectGuid>{CB5AEFFC-0309-42AB-A219-895580F8BE8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>capaLógica</RootNamespace>
-    <AssemblyName>capaLógica</AssemblyName>
+    <RootNamespace>capaAccesoDatos</RootNamespace>
+    <AssemblyName>capaAccesoDatos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,9 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="claseLugares.cs" />
-    <Compile Include="claseSolicitante.cs" />
+    <Compile Include="datosFuncionario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\capaLógica\capaEntidades.csproj">
+      <Project>{b99276d9-f0ba-4b23-9a62-3bf2a55e8b08}</Project>
+      <Name>capaEntidades</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
