Versión 5. Interfaz de vehículo añadida. Licencias añadidas.

--- a/capaAccesoDatos/capaAccesoDatos.csproj
+++ b/capaAccesoDatos/capaAccesoDatos.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="datosFuncionario.cs" />
+    <Compile Include="datosLicencia.cs" />
+    <Compile Include="datosVehiculo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
