--- a/capaLógica/capaEntidades.csproj
+++ b/capaLógica/capaEntidades.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="entidadCentroFormacion.cs" />
     <Compile Include="entidadChofer.cs" />
     <Compile Include="entidadFuncionario.cs" />
     <Compile Include="entidadLicencia.cs" />
