--- a/capaPresentacion/capaPresentacion.csproj
+++ b/capaPresentacion/capaPresentacion.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuracion.cs" />
+    <Compile Include="frmAprobarGira.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAprobarGira.Designer.cs">
+      <DependentUpon>frmAprobarGira.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBusquedaCentro.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,12 @@
     <Compile Include="frmBusquedaVehiculo.Designer.cs">
       <DependentUpon>frmBusquedaVehiculo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmConsultaSolicitud.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmConsultaSolicitud.Designer.cs">
+      <DependentUpon>frmConsultaSolicitud.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmExtemporanea.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +106,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAprobarGira.resx">
+      <DependentUpon>frmAprobarGira.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBusquedaCentro.resx">
       <DependentUpon>frmBusquedaCentro.cs</DependentUpon>
     </EmbeddedResource>
@@ -105,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBusquedaVehiculo.resx">
       <DependentUpon>frmBusquedaVehiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmConsultaSolicitud.resx">
+      <DependentUpon>frmConsultaSolicitud.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmExtemporanea.resx">
       <DependentUpon>frmExtemporanea.cs</DependentUpon>
